# qt-skf

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEPENDENCIES.md  Makefile  README.md
.github/workflows/: build.yml
scripts/: package_mac.sh  package_mac_arm.sh  package_win.ps1
src/api/: ApiRouter.cpp  ApiRouter.h  CMakeLists.txt  HttpServer.cpp  HttpServer.h
src/api/dto/: HttpTypes.cpp  HttpTypes.h  Request.cpp  Response.cpp
src/api/handlers/: BusinessHandlers.cpp
src/app/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/config/: Defaults.h
src/core/application/: AppService.cpp  AppService.h
src/core/container/: ContainerService.cpp
src/core/crypto/: CertService.cpp  CertService.h
src/core/device/: DeviceService.cpp
src/core/file/: FileService.cpp
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SystemTray.cpp  SystemTray.h  UiHelper.h
src/gui/dialogs/: CreateAppDialog.cpp  CreateAppDialog.h  LoginDialog.cpp  MessageBox.cpp  MessageBox.h
src/gui/pages/: DevicePage.cpp  DevicePage.h  LogPage.cpp  LogPage.h  ModulePage.cpp  ModulePage.h
src/gui/views/: AppDetailView.cpp  AppDetailView.h  AppListView.cpp  AppListView.h
src/log/: CMakeLists.txt  Logger.cpp  Logger.h
src/plugin/: PluginManager.cpp  PluginManager.h
src/plugin/interface/: IDriverPlugin.h  PluginTypes.h
src/plugin/skf/: SkfApi.h  SkfLibrary.cpp  SkfLibrary.h  SkfPlugin.cpp  SkfPlugin.h
tests/: CMakeLists.txt
tests/integration/: MockPlugin.h  test_api_compat.sh  test_e2e.cpp  test_hotplug.cpp  test_pin.cpp
tests/unit/: test_apirouter.cpp  test_application.cpp  test_appservice.cpp  test_businesshandlers.cpp  test_certservice.cpp  test_config.cpp  test_configpage.cpp  test_containerservice.cpp  test_createfiledialog.cpp  test_csrdialog.cpp  test_devicepage.cpp  test_deviceservice.cpp  test_error.cpp  test_fileservice.cpp  test_httpserver.cpp  test_httptypes.cpp  test_importcertdialog.cpp  test_logger.cpp  test_logindialog.cpp  test_logmodel.cpp  test_logpage.cpp  test_mainwindow.cpp  test_messagebox.cpp  test_modulepage.cpp  test_pluginmanager.cpp  test_plugintypes.cpp  test_publichandlers.cpp  test_request.cpp  test_response.cpp  test_result.cpp  test_skflibrary.cpp  test_skfplugin.cpp  test_systemtray.cpp
